// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — résolution nom→apparence (anti-régression de-POC match-par-nom) > bestiaire (creatures.json) : label → (plan, espèce, def, échelle) 1`] = `
{
  "? (Créatures d’Outre-Tombe)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "? (Démons de Tzeentch)": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "? (Ours)": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": null,
  },
  "Affreuse Vieille Sorcière Troll des Marais": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Ancien": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Apothicaire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Apprenti Technomage": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Araignée Géante Adulte": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": null,
  },
  "Araignée Géante Impitoyable": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": null,
  },
  "Araignée géante": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": null,
  },
  "Archer Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Archer Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Architechnomage": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Artisan (Services Ruraux Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Artisan (Services Urbains Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Assassin": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Avocat": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Banshee": {
    "def": "Banshee",
    "plan": "spectral",
    "scale": 0.96,
    "species": null,
  },
  "Basilic": {
    "def": "Basilic",
    "plan": "quadruped",
    "scale": 1.1,
    "species": null,
  },
  "Batelier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Bella la Noire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Bestigor Chef de Guerre": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Bestigor Chef de Harde": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Bestigor Combattant": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Bouc Maudit": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Bourgmestre": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Brigand": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Buveur de Sang Exalté de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Buveur de Sang de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Bâtonnier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Bête des marais": {
    "def": "Bête des marais",
    "plan": "amorphous",
    "scale": 1.1,
    "species": null,
  },
  "Capitaine (Patrouilleurs Fluviaux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Capitaine (Patrouilleurs Ruraux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Capitaine du Guet": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chamane-Brey": {
    "def": "Chamane-Brey",
    "plan": "biped",
    "scale": 1,
    "species": "Chamane-Brey",
  },
  "Charlatan": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Charognard": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chasseresse des Ombres": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chauve-souris vampire (Varghulf)": {
    "def": "Varghulf",
    "plan": "winged",
    "scale": 1.1,
    "species": null,
  },
  "Chef Contrebandier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef Pirate": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef Vétéran de la Garde du Village": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de Bande": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de Clan": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de Clan Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Chef de Clan Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Chef de Guerre Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Chef de Guerre Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Chef de Meute": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de Portée": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de Section": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de la Garde du Village": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef d’Escadron": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Cheval": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Chevalier des Tombes": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chien": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Chien de Chasse": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Chien de Compagnie (Chiens)": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Chien de Compagnie (II.A — Animaux Domestiques)": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Chien de Garde": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Chien de Ratier": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Citadin": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Cobaye Mutilé": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Comte Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Contrebandier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Contremaître": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Coureur Nocturne": {
    "def": "Coureur d'égout",
    "plan": "biped",
    "scale": 1,
    "species": "Coureur d'égout",
  },
  "Coureur d’Égouts": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Coursier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Cultiste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Daemonette de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Demigriffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": null,
  },
  "Demigriffon adulte": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": null,
  },
  "Destrier": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Destrier (cheval de guerre lourd)": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Destrier Squelettique": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Doktor": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Dragon": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": null,
  },
  "Druide de la Foi Antique": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Démonette de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Détective": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Elfe (haut et sylvain)": {
    "def": "Haut-Elfe",
    "plan": "biped",
    "scale": 1,
    "species": "Haut-Elfe",
  },
  "Enquêteur Chevronné": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Envoûteuse": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Esclave": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Esclave Faible": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Escroc": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Esprit Faible": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Eusapia Balacañon": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fanatique Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Fantôme": {
    "def": "Fantôme",
    "plan": "spectral",
    "scale": 0.95,
    "species": null,
  },
  "Faussaire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fimir": {
    "def": "Fimir",
    "plan": "biped",
    "scale": 1,
    "species": "Fimir",
  },
  "Fongus de Gork": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fongus de Mork": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fourgue": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fr’hough Mournbreath": {
    "def": "Fr'hough Mournbreath",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": null,
  },
  "Furie Exaltée du Chaos": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Furie du Chaos": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Garde du Village": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Garde-Chiourme": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Gardien des Secrets Exalté de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Gardien des Secrets de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Gor": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Gor Chasseur": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Gor Chef de Guerre": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Gor Chef de Harde": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Gor Combattant": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Gor Éclaireur": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Goule": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Goule de crypte": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Grand Immonde Exalté de Nurgle": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Grand Immonde de Nurgle": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Grand Incendiaire de Tzeentch": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Grand Inquisiteur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Grand Maître des Hybridations": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Grand Moine de la Peste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Grand Sanglier Ombrageux": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Grand Shaman Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Grand Shaman Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Grand Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": null,
  },
  "Grand Troll Sanguinaire": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Grande Prêtresse de Rhya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Griffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": null,
  },
  "Guerrier Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Guerrier Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Guerrier des clans": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Guerrier du Chaos": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Guerrier du Chaos Chef de Bande": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Guerrier du Chaos Chef de Guerre": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Guide-Racoleur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Géant": {
    "def": "Géant",
    "plan": "biped",
    "scale": 1.2,
    "species": "Géant",
  },
  "Halfling": {
    "def": "Halfling",
    "plan": "biped",
    "scale": 1,
    "species": "Halfling",
  },
  "Haut Druide de la Foi Antique": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Haut Juge": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Haut Prêtre-Rôdeur de Taal": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Herboriste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Homme du Guet": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Horde de Zombies": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Horreur Rose de Tzeentch": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Horreur bleue": {
    "def": "Horreur bleue",
    "plan": "biped",
    "scale": 0.8,
    "species": "Horreur bleue",
  },
  "Horreur des Profondeurs": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Horreur du Clan Moulder": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Horreur rose": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Humain": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Hydre": {
    "def": "Hydre",
    "plan": "quadruped",
    "scale": 1.2,
    "species": null,
  },
  "Hyppogriffe": {
    "def": "Hippogriffe",
    "plan": "winged",
    "scale": 1.08,
    "species": null,
  },
  "Héraut Exalté de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Héraut Exalté de Nurgle": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Héraut Exalté de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Héraut Exalté de Tzeentch": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Héraut de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Héraut de Nurgle": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Héraut de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Héraut de Tzeentch": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Incendiaire de Tzeentch": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Inquisiteur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jabberslythe": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Jeune Araignée Géante": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": null,
  },
  "Jeune Brigand": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Citadin (Citadins)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Citadin (I.B - Habitants des Villes)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Contrebandier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Contremaître": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Délinquant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Jeune Gor": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Jeune Goule": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Jeune Interrogateur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Jeune Moine de la Peste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Naufrageur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Jeune Ours": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": null,
  },
  "Jeune Rat Géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": null,
  },
  "Jeune Recrue (Patrouilleurs Fluviaux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue (Patrouilleurs Ruraux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue (Soldats & Mercenaires)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue (Vermines de Choc)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue de la Garde du Village": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue du Guet": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Sanglier": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Jeune Skaven": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Jeune Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": null,
  },
  "Jeune Troll": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Jeune Ungor": {
    "def": "Ungor",
    "plan": "biped",
    "scale": 1,
    "species": "Ungor",
  },
  "Jeune Villageois": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Juge": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Kapo": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Loup Adulte": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Loup funeste": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Magister Mortis": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Apothicaire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Artisan (Services Ruraux Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Artisan (Services Urbains Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Faussaire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Herboriste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Marchand (Services Ruraux Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Marchand (Services Urbains Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Manticore": {
    "def": "Manticore",
    "plan": "winged",
    "scale": 1.1,
    "species": null,
  },
  "Maraudeur du Chaos": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maraudeur du Chaos Chef de Bande": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maraudeur du Chaos Chef de Guerre": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Marchand (Services Ruraux Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Marchand (Services Urbains Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maître Assassin": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maître des Hybridation": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maître des Taillis": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maître des Égouts": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Minotaure": {
    "def": "Minotaure",
    "plan": "biped",
    "scale": 1,
    "species": "Minotaure",
  },
  "Moine D’ulric": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Moine Novice de Taal": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Moine de Sigmar": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Moine de Taal": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Moine de la Peste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Monture Décharné": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Mutant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Médecin": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nain": {
    "def": "Nain",
    "plan": "biped",
    "scale": 1,
    "species": "Nain",
  },
  "Nautonier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Notable": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nurglings": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nuée D’araignées Infantiles": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nuée de Jeunes Squigs": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nuée de Marcassins": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nuée de Nurglings": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nuée de Rats": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nuée de Snotlings": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nécromancien": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nécromancien Puissant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nécrophage": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Officier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Ogre": {
    "def": "Ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Ogre",
  },
  "Ombre Vengeresse": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": null,
  },
  "Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Ours": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": null,
  },
  "Ours Adulte": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": null,
  },
  "Palefroi": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Patrouilleur Fluvial": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Patrouilleur Rural": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pieuvre des tourbières": {
    "def": "Pieuvre",
    "plan": "cephalopod",
    "scale": 1.05,
    "species": null,
  },
  "Pigeon": {
    "def": "Pigeon",
    "plan": "avian",
    "scale": 0.62,
    "species": null,
  },
  "Pilleur de Cryptes": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pilleur de Tombes": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pirate Fluvial": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Plongeur de la Mort": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pol Dankels": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Porte-Peste de Nurgle": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Poulain": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prophète Gris": {
    "def": "Prophète gris",
    "plan": "biped",
    "scale": 1,
    "species": "Prophète gris",
  },
  "Prophète Gris Ancien": {
    "def": "Prophète gris",
    "plan": "biped",
    "scale": 1,
    "species": "Prophète gris",
  },
  "Protagoniste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prédicateur de la Peste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtre D’ulric": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtre de Sigmar": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtre-Rôdeur de Taal": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtre-Voleur de Ranald (I.C - Criminalité Urbaine)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtresse de Rhya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtresse de Shallya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtresse de Verena": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pâtre de la Nuit": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pégase": {
    "def": "Pégase",
    "plan": "winged",
    "scale": 0.95,
    "species": null,
  },
  "Quadrilleur Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Racketteur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Racoleur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Rat Géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": null,
  },
  "Rat Ogre Augmenté": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Rat Ogre Fonctionnel": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Rat géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": null,
  },
  "Rat ogre": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Rebouteux": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Receleur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Reine des Cryptes": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Religieuse Novice de Rhya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Religieuse de Rhya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Religieuse de Shallya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Religieuse de Verena": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Riverain": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Riverain Respecté": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Roi du Trafic": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Répurgateur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sanglier": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Sanglier Adulte": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Sanglier Féroce": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Sanguinaire de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Seigneur Pirate": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Seigneur Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Seigneur du Changement Exalté de Tzeentch": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Seigneur du Changement de Tzeentch": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Seigneur-Brigand": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sergent (Patrouilleurs Fluviaux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sergent (Patrouilleurs Ruraux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sergent du Guet": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Serpent": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": null,
  },
  "Shaman Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Shaman Gor": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Shaman Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Skaven": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Slenderthigh Whiptongue": {
    "def": "Slenderthigh Whiptongue",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": null,
  },
  "Snotling": {
    "def": "Snotling",
    "plan": "biped",
    "scale": 1,
    "species": "Snotling",
  },
  "Soldat & Mercenaire Aguerri": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sommier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcier du Chaos": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcier du Chaos Effroyable": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcier du Chaos Terrifiant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcière": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcière Troll des Marais": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Sous-Officier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Spectre": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": null,
  },
  "Spectre de cairn": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": null,
  },
  "Squelette": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Squelette Vigoureux": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": null,
  },
  "Squig Monstrueux": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": null,
  },
  "Squig des cavernes": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": null,
  },
  "Technomage": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Technomage Expérimenté": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Traqueur Impitoyable": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Troll": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Troll Vétéran": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Tueur À Gages": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Ungor": {
    "def": "Ungor",
    "plan": "biped",
    "scale": 1,
    "species": "Ungor",
  },
  "Ungor Adulte": {
    "def": "Ungor",
    "plan": "biped",
    "scale": 1,
    "species": "Ungor",
  },
  "Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Vermine de Choc": {
    "def": "Vermine de choc",
    "plan": "biped",
    "scale": 1.1,
    "species": "Vermine de choc",
  },
  "Vermine de choc": {
    "def": "Vermine de choc",
    "plan": "biped",
    "scale": 1.1,
    "species": "Vermine de choc",
  },
  "Vhargulf": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Vieil Ours Mal Léché": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": null,
  },
  "Vieille Sorcière Troll des Marais": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Villageois": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Voleur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Voleur Aguerri": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Vouivre": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": null,
  },
  "Voyou": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Vénérable": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Zombie": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
  "Zombie Faible": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
  "Zombie Gardien": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
  "Éclaireur Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Éclaireur Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Érudit": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Érudit de Renom": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
}
`;

exports[`golden — résolution nom→apparence (anti-régression de-POC match-par-nom) > defs du registre : name → (plan, espèce, def, échelle) 1`] = `
{
  "Araignée": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": null,
  },
  "Banshee": {
    "def": "Banshee",
    "plan": "spectral",
    "scale": 0.96,
    "species": null,
  },
  "Basilic": {
    "def": "Basilic",
    "plan": "quadruped",
    "scale": 1.1,
    "species": null,
  },
  "Bête Impériale": {
    "def": "Bête Impériale",
    "plan": "biped",
    "scale": 0.85,
    "species": "Bête Impériale",
  },
  "Bête des marais": {
    "def": "Bête des marais",
    "plan": "amorphous",
    "scale": 1.1,
    "species": null,
  },
  "Chamane-Brey": {
    "def": "Chamane-Brey",
    "plan": "biped",
    "scale": 1,
    "species": "Chamane-Brey",
  },
  "Cheval": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Chien": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Coureur d'égout": {
    "def": "Coureur d'égout",
    "plan": "biped",
    "scale": 1,
    "species": "Coureur d'égout",
  },
  "Crapaud": {
    "def": "Crapaud",
    "plan": "quadruped",
    "scale": 0.98,
    "species": null,
  },
  "Dragon": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": null,
  },
  "Démon": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Démonette": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Elfe sylvain": {
    "def": "Elfe sylvain",
    "plan": "biped",
    "scale": 1,
    "species": "Elfe sylvain",
  },
  "Esclave skaven": {
    "def": "Esclave skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Esclave skaven",
  },
  "Fantôme": {
    "def": "Fantôme",
    "plan": "spectral",
    "scale": 0.95,
    "species": null,
  },
  "Fimir": {
    "def": "Fimir",
    "plan": "biped",
    "scale": 1,
    "species": "Fimir",
  },
  "Fr'hough Mournbreath": {
    "def": "Fr'hough Mournbreath",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": null,
  },
  "Furie du Chaos": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Gnome": {
    "def": "Gnome",
    "plan": "biped",
    "scale": 1,
    "species": "Gnome",
  },
  "Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Gor": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Goule": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Griffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": null,
  },
  "Guerrier du Chaos": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Géant": {
    "def": "Géant",
    "plan": "biped",
    "scale": 1.2,
    "species": "Géant",
  },
  "Halfling": {
    "def": "Halfling",
    "plan": "biped",
    "scale": 1,
    "species": "Halfling",
  },
  "Happeur carnivore": {
    "def": "Happeur carnivore",
    "plan": "avian",
    "scale": 1.15,
    "species": null,
  },
  "Haut-Elfe": {
    "def": "Haut-Elfe",
    "plan": "biped",
    "scale": 1,
    "species": "Haut-Elfe",
  },
  "Hippogriffe": {
    "def": "Hippogriffe",
    "plan": "winged",
    "scale": 1.08,
    "species": null,
  },
  "Homme-bête": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Homme-bête de Khorne": {
    "def": "Homme-bête de Khorne",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête de Khorne",
  },
  "Homme-bête à tête de poulet": {
    "def": "Homme-bête à tête de poulet",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête à tête de poulet",
  },
  "Homme-bête à tête de vache": {
    "def": "Homme-bête à tête de vache",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête à tête de vache",
  },
  "Horreur bleue": {
    "def": "Horreur bleue",
    "plan": "biped",
    "scale": 0.8,
    "species": "Horreur bleue",
  },
  "Horreur rose": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Hydre": {
    "def": "Hydre",
    "plan": "quadruped",
    "scale": 1.2,
    "species": null,
  },
  "Jabberslythe": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Jumeaux": {
    "def": "Jumeaux",
    "plan": "biped",
    "scale": 0.62,
    "species": "Jumeaux",
  },
  "Liche": {
    "def": "Liche",
    "plan": "biped",
    "scale": 1,
    "species": "Liche",
  },
  "Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Manticore": {
    "def": "Manticore",
    "plan": "winged",
    "scale": 1.1,
    "species": null,
  },
  "Minotaure": {
    "def": "Minotaure",
    "plan": "biped",
    "scale": 1,
    "species": "Minotaure",
  },
  "Nain": {
    "def": "Nain",
    "plan": "biped",
    "scale": 1,
    "species": "Nain",
  },
  "Ogre": {
    "def": "Ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Ogre",
  },
  "Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Ours": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": null,
  },
  "Pieuvre": {
    "def": "Pieuvre",
    "plan": "cephalopod",
    "scale": 1.05,
    "species": null,
  },
  "Pigeon": {
    "def": "Pigeon",
    "plan": "avian",
    "scale": 0.62,
    "species": null,
  },
  "Prophète gris": {
    "def": "Prophète gris",
    "plan": "biped",
    "scale": 1,
    "species": "Prophète gris",
  },
  "Pégase": {
    "def": "Pégase",
    "plan": "winged",
    "scale": 0.95,
    "species": null,
  },
  "Rassarak": {
    "def": "Rassarak",
    "plan": "biped",
    "scale": 1,
    "species": "Rassarak",
  },
  "Rat géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": null,
  },
  "Rat ogre": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Sanglier": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Sangsue": {
    "def": "Sangsue",
    "plan": "serpentine",
    "scale": 0.92,
    "species": null,
  },
  "Serpent": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": null,
  },
  "Skaven": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Slenderthigh Whiptongue": {
    "def": "Slenderthigh Whiptongue",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": null,
  },
  "Snotling": {
    "def": "Snotling",
    "plan": "biped",
    "scale": 1,
    "species": "Snotling",
  },
  "Spectre": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": null,
  },
  "Squelette": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": null,
  },
  "Troll": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Ungor": {
    "def": "Ungor",
    "plan": "biped",
    "scale": 1,
    "species": "Ungor",
  },
  "Urzo": {
    "def": "Urzo",
    "plan": "biped",
    "scale": 1.25,
    "species": "Urzo",
  },
  "Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Varghulf": {
    "def": "Varghulf",
    "plan": "winged",
    "scale": 1.1,
    "species": null,
  },
  "Vermine de choc": {
    "def": "Vermine de choc",
    "plan": "biped",
    "scale": 1.1,
    "species": "Vermine de choc",
  },
  "Zombie": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
}
`;
